# ai-data-warehouse-

./: AGENTS.md  README.md  pyproject.toml
examples/requirements/: member_growth.md
examples/sql/: bad_query.sql  good_query.sql
knowledge/domains/: member_growth.yaml
knowledge/metrics/: trade_gmv.yaml
knowledge/metrics/member_growth/: member_page_visit_uv.yaml  member_paid_user_count.yaml  member_payment_conversion_rate.yaml
knowledge/tables/: dwd_member_order_di.yaml
scripts/: distill_requirement.py  generate_model_spec.py  review_sql.py  validate_metric_registry.py
skills/business-knowledge-distiller/: SKILL.md
skills/business-knowledge-distiller/agents/: openai.yaml
skills/business-knowledge-distiller/references/: extraction-schema.md
skills/data-quality-checker/: SKILL.md
skills/data-quality-checker/agents/: openai.yaml
skills/data-quality-checker/references/: quality-rule-template.md
skills/metric-definition-manager/: SKILL.md
skills/metric-definition-manager/agents/: openai.yaml
skills/metric-definition-manager/references/: metric-yaml-schema.md
skills/sql-reviewer-starrocks/: SKILL.md
skills/sql-reviewer-starrocks/agents/: openai.yaml
skills/sql-reviewer-starrocks/references/: sql-review-checklist.md
skills/starrocks-query-analyst/: SKILL.md
skills/warehouse-modeling-assistant/: SKILL.md
src/ai_dw/: io.py  mcp_client.py  metric_registry.py  model_generator.py  models.py  requirement_distiller.py  sql_builder.py  sql_review.py
tests/: test_distiller.py  test_sql_review.py
(+4 files in other folders)
